# machine-learning-zoomcap-journey

./: README.md  pyproject.toml
01-intro/: linear_algebra.ipynb  numpy-journey.ipynb
01-intro/.ipynb_checkpoints/: numpy-journey-checkpoint.ipynb
02-regression-linear/: regression_linear.ipynb
