[tool.poetry]
name = "machine-learning-zoomcap-journey"
version = "0.1.0"
description = ""
authors = ["Ben Omar <bennessh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.4.0"
jupyterlab = "^4.5.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
